bg image overflow fix
^

--- a/cookinghs/src/components/Login/LoginMain/styles.css
+++ b/cookinghs/src/components/Login/LoginMain/styles.css
@@ -41,4 +41,6 @@
 #LoginMain{
     overflow: hidden;
     background-image: url("background.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
